required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.


Current Version (SVN branch-5-2)
--------------------------------

- Fixed a memory leak associated with not deleting the lexer buffer 
  before parsing certain types of strings. (#2729)

- Masking the out-of-range characters to avoid the crash
  in the AGG renderer (#2739)

- AGG: fix pixmap symbols not drawing if no color was specified (#2736)

- Accept WMS requests in which the optional SERVICE param is missing. 
  A new test was incorrectly added in 5.2.0 that resulted in the error 
  "Incomplete WFS request: SERVICE parameter missing" when the SERVICE 
  parameter was missing in WMS requests in which the SERVICE param is 
  optional (#2737)

- SLD: when creating well known symbols on the fly the pen-up value
  used should be -99.
     
- Support reading projection parameter for OFC filters (#2712)

- Stop configure execution with an error if path to one of the -config 
  scripts is invalid (#2710)

- Fixed the configure script: failed to detect php5 on ubuntu. (#2365)


Version 5.2.0 (2008-07-16):
---------------------------

- mapfile.c: Fixed a bug that prevented using named symbols via URL configuration. (#2700)

Version 5.2.0-rc1 (2008-07-09):
-------------------------------

- mapowscommon.c: fix support multiple namespaces (#2690)

- Fix OGC simple filters on SDE layers (#2685)

- wfs11 getcapabilities: correct memory corruption (#2686)

- Allow building against Curl 7.10.6 and older which lack CURLOPT_PROXYAUTH
  option required for *_proxy_auth_type metadata (#571)

- Avoid fatal error when creating new ShapeFileObj with MapScript (#2674)

- Fixed problem with WMS INIMAGE exceptions vs AGG output formats (#2438)
